<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/greeting_cd"
        app:srcCompat="@drawable/ic_baseline_back_hand_24" />

    <Button
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:text="@string/ok_label" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/enter_your_name_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />
</LinearLayout>
